# web-cli

./: LICENSE  README.md  pyproject.toml
src/web_cli/: __init__.py  app.py  main.py  schemas.py  server.py  types.py
