[project]
name = "web-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tfharrelson", email = "tharrel4@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
]

[project.scripts]
web-cli = "web_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
